some spacing fixed

--- a/grammarexpert/exam/static/css/header.css
+++ b/grammarexpert/exam/static/css/header.css
@@ -177,8 +177,6 @@ img::-moz-selection {
 }
 
 .masthead {
-    padding-top: 10rem;
-    padding-bottom: calc(10rem - 56px);
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
